# OChaT

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  test.db
.junie/: guidelines.md
data/: ocht.db
docs/: IMPLEMENTATION_SUMMARY.md  memory-system.md
migrations/: env.py
migrations/versions/: 131383e4170c_initial_models.py  f608934696fd_add_is_available_and_last_checked_to_.py
src/ocht/: cli.py
src/ocht.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ocht/adapters/: base.py  ollama.py
src/ocht/core/: config.py  model_manager.py  version.py
src/ocht/data/: ocht.db
src/ocht/repositories/: llm_provider_config.py  message.py  model.py  prompt_template.py  provider_config.py  setting.py  workspace.py
src/ocht/services/: chat.py  config.py  model_manager.py  provider_manager.py  workspace.py  workspace_manager.py
src/ocht/tui/: app.py
src/ocht/tui/screens/: provider_manager.py  provider_selector.py  workspace_selector.py
src/ocht/tui/styles/: app.tcss  confirmation_dialog.tcss  model_edit.tcss  model_manager.tcss  model_selector.tcss  provider_edit.tcss  provider_manager.tcss  provider_selector.tcss  selector_modal.tcss  setting_edit.tcss  settings_manager.tcss  workspace_edit.tcss  workspace_manager.tcss  workspace_selector.tcss
src/ocht/tui/widgets/: chat_bubble.py  custom_footer.py
tests/: database_tests.py  llm_provider_config_tests.py  memory_tests.py  messege_tests.py  model_tests.py  prompt_template_tests.py  settings_test.py  workspace_tests.py
