[project]
name = "ocht"
version = "0.1.0"
description = "Modulare Python-TUI zur Steuerung von LLMs via LangChain"
authors = [
  { name = "Roman Thimian", email = "roman.thimian@me.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tui", "langchain", "llm", "cli"]

dependencies = [
  "alembic>=1.15.2",
  "langchain>=0.3.25",
  "ollama>=0.4.8",
  "rich>=14.0.0",
  "sqlmodel>=0.0.24",
  "textual>=3.2.0",
]
